@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.19 2004/12/09 22:21:32 manu Exp $
+# $Id: Makefile,v 1.20 2004/12/12 22:56:49 manu Exp $
 
 #
 # Copyright (c) 2004 Emmanuel Dreyfus
@@ -82,28 +82,28 @@ rc-debian.sh:    rc-debian.sh.in
 rc-gentoo.sh:    rc-gentoo.sh.in
 	${SED} "s|@BINDIR[@]|${BINDIR}|g; s|@USER[@]|${USER}|g" \
 	    rc-gentoo.sh.in > rc-gentoo.sh
-rc-suse.sh:    rc-suse.sh.in
+rc-suse.sh:	 rc-suse.sh.in
 	${SED} "s|@BINDIR[@]|${BINDIR}|g; s|@USER[@]|${USER}|g" \
 	    rc-suse.sh.in > rc-suse.sh
 
 install:	milter-greylist
-	${INSTALL} -d -m 755 ${BINDIR}
-	${INSTALL} -d -m 755 ${MANDIR}/man8
-	${INSTALL} -d -m 755 ${MANDIR}/man5
-	${INSTALL} -m 755 milter-greylist ${BINDIR}
-	${INSTALL} -m 644 milter-greylist.8 ${MANDIR}/man8
-	${INSTALL} -m 644 greylist.conf.5 ${MANDIR}/man5
-	${TEST} -f /etc/mail/greylist.conf -o -f /etc/mail/greylist.except || \
-	     ${INSTALL} -m 644 greylist.conf /etc/mail
-	${INSTALL} -d -m 755 -o ${USER} /var/milter-greylist
-	@${TEST} -f /var/db/greylist.db && (			 	   \
+	${INSTALL} -d -m 755 ${DESTDIR}${BINDIR}
+	${INSTALL} -d -m 755 ${DESTDIR}${MANDIR}/man8
+	${INSTALL} -d -m 755 ${DESTDIR}${MANDIR}/man5
+	${INSTALL} -m 755 milter-greylist ${DESTDIR}${BINDIR}
+	${INSTALL} -m 644 milter-greylist.8 ${DESTDIR}${MANDIR}/man8
+	${INSTALL} -m 644 greylist.conf.5 ${DESTDIR}${MANDIR}/man5
+	${TEST} -f ${DESTDIR}/etc/mail/greylist.conf -o -f ${DESTDIR}/etc/mail/greylist.except || \
+	     ${INSTALL} -m 644 greylist.conf ${DESTDIR}/etc/mail
+	${INSTALL} -d -m 755 -o ${USER} ${DESTDIR}/var/milter-greylist
+	@${TEST} -f ${DESTDIR}/var/db/greylist.db && (			 	   \
 		echo "	================================================"; \
 		echo "	  WARNING: the dump file location has changed,  "; \
 		echo "	  Please move /var/db/greylist.db, the default  "; \
 		echo "	  location is now in /var/milter-greylist/      "; \
 		echo "	================================================"; \
 	) || ${TRUE}
-	@${TEST} -f /etc/mail/greylist.except && (		 	   \
+	@${TEST} -f ${DESTDIR}/etc/mail/greylist.except && (		 	   \
 		echo "	================================================"; \
 		echo "	 WARNING: the config file name has changed,     "; \
 		echo "	 Please rename /etc/mail/greylist.except, the   "; \
